tooling/nargo_cli/tests/snapshots/execution_success/regression_5615/execute__tests__force_brillig_false_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: poseidon2 is private and not visible from the current module
  ┌─ src/main.nr:3:16
  │
3 │ use std::hash::poseidon2::Poseidon2Hasher;
  │                --------- poseidon2 is private
  │

warning: Poseidon2Hasher is private and not visible from the current module
  ┌─ src/main.nr:3:27
  │
3 │ use std::hash::poseidon2::Poseidon2Hasher;
  │                           --------------- Poseidon2Hasher is private
  │
